Fixed display overflow

--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
   font-size: xx-large;
   font-weight: bold;
   text-align: right;
-  padding: 25px;
+  overflow: hidden;
 }
 
 .result {
